--- a/SCATTER_00/index.html
+++ b/SCATTER_00/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <script src="../../LIB/d3.js"></script>                                  <!--1-->
-  <script src="script.js"></script>                      <!--2-->
+  <script src="../../LIB/d3.js"></script>                             
+  <script src="script.js"></script>                      
 </head>
 
-<body onload="makeDemo1()">                                      <!--3-->
+<body onload="makeDemo1()">                                
 <svg id="demo1" width="600" height="300"
-     style="background: #5657b1" />                          <!--4-->
+     style="background: #5657b1" />
 </body>
 </html>
